--- a/Cal-c (calculator)/cal-c.html
+++ b/Cal-c (calculator)/cal-c.html
@@ -9,36 +9,36 @@
 <body>
     <div class="container">
         <div class="calculator">
-            <input type="text" placeholder="0" name="" id="inputBox">
+            <input type="text"  id="inputBox" placeholder="0">
             <div>
-                <div class="button operator">AC</div>
-                <div class="button operator">DEL</div>
-                <div class="button operator">%</div>
-                <div class="button operator">/</div>
+                <button class="button operator">AC</button>
+                <button class="button operator">DEL</button>
+                <button class="button operator">%</button>
+                <button class="button operator">/</button>
             </div>
             <div>
-                <div class="button">7</div>
-                <div class="button">8</div>
-                <div class="button">9</div>
-                <div class="button operator">*</div>
+                <button class="button">7</button>
+                <button class="button">8</button>
+                <button class="button">9</button>
+                <button class="button operator">*</button>
             </div>
             <div>
-                <div class="button">4</div>
-                <div class="button">5</div>
-                <div class="button">6</div>
-                <div class="button operator">-</div>
+                <button class="button">4</button>
+                <button class="button">5</button>
+                <button class="button">6</button>
+                <button class="button operator">-</button>
             </div>
             <div>
-                <div class="button">1</div>
-                <div class="button">2</div>
-                <div class="button">3</div>
-                <div class="button operator">+</div>
+                <button class="button">1</button>
+                <button class="button">2</button>
+                <button class="button">3</button>
+                <button class="button operator">+</button>
             </div>
             <div>
-                <div class="button">00</div>
-                <div class="button">0</div>
-                <div class="button">.</div>
-                <div class="button equalBtn">=</div>
+                <button class="button">00</button>
+                <button class="button">0</button>
+                <button class="button">.</button>
+                <button class="button equalBtn">=</button>
             </div>
         </div>
     </div>
